--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -8,5 +8,5 @@
 <app-book-card
   [content]="book"
   (detailClick)="goToBookDetails($event)"
-  *ngFor="let book of books$ | async | bookFilter: bookSearchTerm"
+  *ngFor="let book of books() | bookFilter: bookSearchTerm"
 ></app-book-card>
