--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -5,6 +5,11 @@
   (input)="updateBookSearchTerm($event)"
 />
 
+<div>
+  <a routerLink="new">Create Book</a>
+</div>
+
+
 <app-book-card
   [content]="book"
   (detailClick)="goToBookDetails($event)"
