solve--write-custom-validator

--- a/src/app/book/book-new/book-new.component.html
+++ b/src/app/book/book-new/book-new.component.html
@@ -25,6 +25,9 @@
     <small *ngIf="form.get('author')?.dirty && form.get('author')?.hasError('required')">
       Please insert an Author.
     </small>
+    <small *ngIf="form.get('author')?.dirty && form.get('author')?.hasError('invalidAuthor')">
+      Der Name eines Autors darf keine Zahlen beinhalten!
+    </small>
   </label>
 
   <label class="form-field">
